-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u20, 9, 18, 19
-
Component/s: client-libs
AwtWindow::SetIconData leaks the old icon handles in hOldIcon and hOldIconSm if CreateIconFromRaster raises an exception.
Additionally, an exception is checked only after the first call to CreateIconFromRaster.
This issue was found during code review
https://github.com/openjdk/jdk/pull/7691#issuecomment-1062193614
for another bug:JDK-8282628.
Additionally, an exception is checked only after the first call to CreateIconFromRaster.
This issue was found during code review
https://github.com/openjdk/jdk/pull/7691#issuecomment-1062193614
for another bug:
- duplicates
-
JDK-8282879 Potential leak icon handles in AwtWindow::SetIconData()
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/48ece072
-
Review(master)
openjdk/jdk/22932