8282862: AwtWindow::SetIconData leaks old icon handles if an exception is detected